--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: The Inquisitive
-subtitle: The Search for Everything
+subtitle: Answers through Experiments
 use-site-title: true
 ---
 
